# viz3d

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Readme.md  cmake_install.cmake  imgui.ini  install.bat  install.sh
.github/workflows/: main.yml
Eigen3/src/Eigen3-build/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Eigen3ConfigVersion.cmake  Eigen3Targets.cmake  Makefile  buildtests.sh  cdashtesting.cmake  cmake_install.cmake  eigen3.pc  install_manifest.txt
Eigen3/src/Eigen3-build/Eigen/: Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/bench/spbench/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/blas/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/demos/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/doc/: Doxyfile  Doxyfile-unsupported  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/doc/examples/: Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/doc/snippets/: Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/doc/special_examples/: Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/language_tests/Fortran/: CMakeCache.txt
Eigen3/src/Eigen3-build/lapack/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/scripts/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/unsupported/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/unsupported/Eigen/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/unsupported/Eigen/CXX11/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/unsupported/doc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/unsupported/doc/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/unsupported/doc/snippets/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-build/unsupported/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
Eigen3/src/Eigen3-stamp/: Eigen3-gitinfo.txt
Eigen3/tmp/: Eigen3-cfgcmd.txt  Eigen3-gitclone.cmake  Eigen3-gitupdate.cmake
cmake/: external.cmake  global_vars.cmake  project_config.cmake.in  test.cmake
glad/src/glad-build/: CMakeCache.txt  Makefile  cmake_install.cmake  gladConfigVersion.cmake  install_manifest.txt
glad/src/glad-build/include/glad/: glad.h
glad/src/glad-build/src/: glad.c
glad/src/glad-stamp/: glad-gitclone-lastrun.txt
glad/tmp/: glad-cfgcmd.txt  glad-gitclone.cmake  glad-gitupdate.cmake
glfw/src/glfw-build/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake  install_manifest.txt
glfw/src/glfw-build/docs/: Doxyfile  Makefile  cmake_install.cmake  warnings.txt
glfw/src/glfw-build/docs/html/: bug.html  build_8dox.html  build_guide.html  compat_8dox.html  compat_guide.html  compile_8dox.html  compile_guide.html  context_8dox.html  context_guide.html  deprecated.html  dir_8daac8d80174c3c2bda04ac826a4ad1b.html  dir_ba65fa1a825da90904e40408085adac9.html  dir_dcbd26bb56a8c6682c7e5a2579bdd00d.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8dox.html  input_guide.html  internal_8dox.html  internals_guide.html  intro_8dox.html  (+21 more)
glfw/src/glfw-build/docs/html/search/: all_10.js  all_5.js  functions_0.js  groups_9.js  typedefs_0.js
glfw/src/glfw-build/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
glfw/src/glfw-build/src/: Makefile  cmake_install.cmake  glfw3.pc
glfw/src/glfw-build/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  opacity  reopen  tearing  threads  timeout  title  triangle-vulkan  windows
glfw/tmp/: glfw-cfgcmd.txt  glfw-gitclone.cmake  glfw-gitupdate.cmake
glog/src/glog-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  demangle_unittest  glog-config-version.cmake  glog-modules.cmake  glog-targets.cmake  install_manifest.txt  libglog.so.0  logging_unittest  signalhandler_unittest  stacktrace_unittest  stl_logging_unittest  symbolize_unittest  utilities_unittest
glog/src/glog-stamp/: glog-gitclone-lastrun.txt
glog/tmp/: glog-cfgcmd.txt  glog-gitclone.cmake  glog-gitupdate.cmake
include/viz3d/: camera.h  config.h  engine.h  imgui_utils.h  model.h  opengl_utils.h  shader.h  types.h  ui.h  vtk_window.h
install/Release/glad/lib/cmake/glad/: gladTargets.cmake
install/Release/glfw/lib/cmake/glfw3/: glfw3Targets.cmake
install/Release/glog/lib/: libglog.so.0.5.0
install/Release/glog/lib/cmake/glog/: glog-config.cmake  (+2 more)
install/Release/glog/lib/pkgconfig/: libglog.pc
src/: CMakeLists.txt  main_opengl.cpp
src/example/: CMakeLists.txt  example.cpp  example_vtk.cxx
src/viz3d/: CMakeLists.txt  camera.cpp  camera.hpp  config.cpp  engine.cpp  engine.hpp  image.cpp  image.hpp  imgui_utils.cpp  model.cpp  model.hpp  opengl_utils.cpp  opengl_utils.hpp  shader.cpp  shader.hpp  stb_image.h  types.hpp  ui.cpp  vtk_window.cpp
test/: CMakeLists.txt  test_config.cxx  test_utils.h  test_vtk_window.cxx
